--- a/Index.html
+++ b/Index.html
@@ -226,7 +226,7 @@
         );
 
         // Customization logic
-        let selectedColor = new THREE.Color(colorPicker.value'));
+        let selectedColor = new THREE.Color(colorPicker.value);
         let logoImageFile = null;
 
         colorPicker.addEventListener('input', (e) => {
