--- a/Index.html
+++ b/Index.html
@@ -32,7 +32,6 @@
             </div>
         </div>
         <button id="apply-customization" class="bg-green-500 text-white px-4 py-2 mt-4 w-full">Apply Customization</button>
-        <button id="log-settings" class="bg-blue-500 text-white px-4 py-2 mt-4 w-full">Log Current Settings</button>
     </div>
 
     <script type="importmap">
@@ -49,18 +48,15 @@
         import { GLTFLoader } from 'three/addons/loaders/GLTFLoader.js';
         import { MeshoptDecoder } from 'three/addons/libs/meshopt_decoder.module.js';
         import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
-        import { GUI } from 'https://cdn.jsdelivr.net/npm/lil-gui@0.19.2/dist/lil-gui.esm.min.js';
 
         const container = document.getElementById('three-container');
         const loadingDiv = document.getElementById('loading');
         const colorPicker = document.getElementById('product-color');
         const logoUpload = document.getElementById('logo-upload');
         const applyBtn = document.getElementById('apply-customization');
-        const logBtn = document.getElementById('log-settings');
 
         const scene = new THREE.Scene();
         const camera = new THREE.PerspectiveCamera(45, container.clientWidth / container.clientHeight, 0.1, 1000);
-        camera.position.set(0, 0, 5);
 
         const renderer = new THREE.WebGLRenderer({ antialias: true });
         renderer.setSize(container.clientWidth, container.clientHeight);
@@ -71,132 +67,34 @@
         controls.enableDamping = true;
         controls.dampingFactor = 0.05;
 
-        // Add ambient light
-        const ambientParams = {
-            color: '#ffffff',
-            intensity: 0.5
-        };
-        const ambient = new THREE.AmbientLight(ambientParams.color, ambientParams.intensity);
+        // Baked camera settings
+        camera.position.set(-0.14174618135894057, 2.1952267593971606, 10.254996729868925);
+        camera.rotation.set(-0.06287602690434883, -0.011933009173710245, -0.0007512725447900868, 'XYZ');
+        const focalLength = 50;
+        const sensorHeight = 24; // mm, vertical
+        camera.fov = 2 * Math.atan(sensorHeight / (2 * focalLength)) * (180 / Math.PI);
+        camera.updateProjectionMatrix();
+
+        // Baked ambient light
+        const ambient = new THREE.AmbientLight('#ffffff', 0);
         scene.add(ambient);
 
-        // Add 3 customizable lights
-        const lightSlots = [];
-        for (let i = 0; i < 3; i++) {
-            const initialType = 'DirectionalLight';
-            const params = {
-                type: initialType,
-                color: '#ffffff',
-                intensity: 1,
-                position: { x: (i - 1) * 3, y: 5, z: 5 },
-                distance: 0, // for PointLight
-                decay: 1, // for PointLight
-                groundColor: '#ffffff' // for HemisphereLight
-            };
-            lightSlots.push({ params });
-        }
+        // Baked lights
+        const lightsData = [
+            { type: 'DirectionalLight', color: '#0040ff', intensity: 7.25, position: [7.7, 3.8, -17.2] },
+            { type: 'DirectionalLight', color: '#ffffff', intensity: 3.44, position: [-1.5, 5, 5] },
+            { type: 'DirectionalLight', color: '#ffffff', intensity: 1.6, position: [0, 5, -5] }
+        ];
 
-        // Initial positions for the 3 lights around the object
-        lightSlots[0].params.position = { x: 5, y: 5, z: 5 };
-        lightSlots[1].params.position = { x: -5, y: 5, z: 5 };
-        lightSlots[2].params.position = { x: 0, y: 5, z: -5 };
-
-        // Function to create light from params
-        function createLightFromParams(params) {
+        lightsData.forEach(data => {
             let light;
-            const color = new THREE.Color(params.color);
-            const intensity = params.intensity;
-            if (params.type === 'DirectionalLight') {
-                light = new THREE.DirectionalLight(color, intensity);
-                light.target = new THREE.Object3D();
-            } else if (params.type === 'PointLight') {
-                light = new THREE.PointLight(color, intensity, params.distance, params.decay);
-            } else if (params.type === 'HemisphereLight') {
-                light = new THREE.HemisphereLight(color, new THREE.Color(params.groundColor), intensity);
-            }
-            if (light.position) light.position.set(params.position.x, params.position.y, params.position.z);
-            return light;
-        }
-
-        // Initialize lights
-        lightSlots.forEach(slot => {
-            slot.light = createLightFromParams(slot.params);
-            scene.add(slot.light);
-            if (slot.light.target) scene.add(slot.light.target);
-        });
-
-        // Camera focal length control (assuming vertical sensor size of 24mm for full-frame equivalent)
-        const cameraParams = {
-            focalLength: 50 // mm, initial
-        };
-        function updateCameraFov() {
-            const sensorHeight = 24; // mm, vertical
-            camera.fov = 2 * Math.atan(sensorHeight / (2 * cameraParams.focalLength)) * (180 / Math.PI);
-            camera.updateProjectionMatrix();
-        }
-        updateCameraFov();
-
-        // GUI setup
-        const gui = new GUI();
-
-        // Camera folder (focal length only, position/rotation via OrbitControls)
-        const cameraFolder = gui.addFolder('Camera');
-        cameraFolder.add(cameraParams, 'focalLength', 5, 200, 1).onChange(updateCameraFov);
-
-        // Ambient light folder
-        const ambientFolder = gui.addFolder('Ambient Light');
-        ambientFolder.addColor(ambientParams, 'color').onChange(v => ambient.color.set(v));
-        ambientFolder.add(ambientParams, 'intensity', 0, 2, 0.01).onChange(v => ambient.intensity = v);
-
-        // Function to build GUI for a light slot
-        function buildLightGui(folder, slotIndex) {
-            const params = lightSlots[slotIndex].params;
-
-            // Clear existing controllers
-            folder.controllersRecursive().forEach(c => c.destroy());
-            folder.children.forEach(child => {
-                if (child.isFolder) child.destroy();
-            });
-
-            // Add type dropdown
-            folder.add(params, 'type', ['DirectionalLight', 'PointLight', 'HemisphereLight']).onChange(() => {
-                // Update light
-                if (lightSlots[slotIndex].light) {
-                    scene.remove(lightSlots[slotIndex].light);
-                    if (lightSlots[slotIndex].light.target) scene.remove(lightSlots[slotIndex].light.target);
-                }
-                lightSlots[slotIndex].light = createLightFromParams(params);
-                scene.add(lightSlots[slotIndex].light);
-                if (lightSlots[slotIndex].light.target) scene.add(lightSlots[slotIndex].light.target);
-
-                // Rebuild GUI
-                buildLightGui(folder, slotIndex);
-            });
-
-            // Common params
-            folder.addColor(params, 'color').onChange(v => lightSlots[slotIndex].light.color.set(v));
-            folder.add(params, 'intensity', 0, 10, 0.01).onChange(v => lightSlots[slotIndex].light.intensity = v);
-
-            // Position if applicable (not for Hemisphere)
-            if (params.type !== 'HemisphereLight') {
-                const posFolder = folder.addFolder('Position');
-                posFolder.add(params.position, 'x', -50, 50, 0.1).onChange(v => lightSlots[slotIndex].light.position.x = v);
-                posFolder.add(params.position, 'y', -50, 50, 0.1).onChange(v => lightSlots[slotIndex].light.position.y = v);
-                posFolder.add(params.position, 'z', -50, 50, 0.1).onChange(v => lightSlots[slotIndex].light.position.z = v);
-            }
-
-            // Type-specific
-            if (params.type === 'PointLight') {
-                folder.add(params, 'distance', 0, 100, 0.1).onChange(v => lightSlots[slotIndex].light.distance = v);
-                folder.add(params, 'decay', 0, 2, 0.01).onChange(v => lightSlots[slotIndex].light.decay = v);
-            } else if (params.type === 'HemisphereLight') {
-                folder.addColor(params, 'groundColor').onChange(v => lightSlots[slotIndex].light.groundColor.set(v));
-            }
-        }
-
-        // Create light folders
-        lightSlots.forEach((slot, i) => {
-            const folder = gui.addFolder(`Light ${i + 1}`);
-            buildLightGui(folder, i);
+            if (data.type === 'DirectionalLight') {
+                light = new THREE.DirectionalLight(data.color, data.intensity);
+                light.position.set(...data.position);
+                light.target = new THREE.Object3D(); // Target at origin
+                scene.add(light.target);
+            } // Add other types if needed in future
+            scene.add(light);
         });
 
         // Model loading
@@ -288,35 +186,6 @@
                 };
                 reader.readAsDataURL(logoImageFile);
             }
-        });
-
-        // Log settings button
-        logBtn.addEventListener('click', () => {
-            const settings = {
-                camera: {
-                    position: camera.position.toArray(),
-                    rotation: camera.rotation.toArray(),
-                    focalLength: cameraParams.focalLength
-                },
-                ambient: {
-                    color: ambientParams.color,
-                    intensity: ambientParams.intensity
-                },
-                lights: lightSlots.map(slot => ({
-                    type: slot.params.type,
-                    color: slot.params.color,
-                    intensity: slot.params.intensity,
-                    position: [slot.params.position.x, slot.params.position.y, slot.params.position.z],
-                    ...(slot.params.type === 'PointLight' ? {
-                        distance: slot.params.distance,
-                        decay: slot.params.decay
-                    } : {}),
-                    ...(slot.params.type === 'HemisphereLight' ? {
-                        groundColor: slot.params.groundColor
-                    } : {})
-                }))
-            };
-            console.log(JSON.stringify(settings, null, 2));
         });
 
         // Resize handler
