--- a/Index.html
+++ b/Index.html
@@ -57,9 +57,6 @@
         import { EffectComposer } from 'three/addons/postprocessing/EffectComposer.js';
         import { RenderPass } from 'three/addons/postprocessing/RenderPass.js';
         import { UnrealBloomPass } from 'three/addons/postprocessing/UnrealBloomPass.js';
-        import { FilmPass } from 'three/addons/postprocessing/FilmPass.js';
-        import { ShaderPass } from 'three/addons/postprocessing/ShaderPass.js';
-        import { VignetteShader } from 'three/addons/shaders/VignetteShader.js';
 
         const container = document.getElementById('three-container');
         const loadingDiv = document.getElementById('loading');
@@ -71,15 +68,15 @@
 
         const scene = new THREE.Scene();
         const camera = new THREE.PerspectiveCamera(45, container.clientWidth / container.clientHeight, 0.1, 1000);
-        camera.position.set(-0.28403291074362663, 1.4382243402279855, 10.275912849022538);
-        camera.rotation.set(0.0008972859317435898, -0.023913209016349662, 0.00002145494684692914);
+        camera.position.set(-0.2840329107436267, 1.4382243402279846, 10.275912849022538);
+        camera.rotation.set(0.00101810946737628, -0.021709860116203898, 0.00002210128553521455);
 
-        const renderer = new THREE.WebGLRenderer({ antialias: true, alpha: true });
+        const renderer = new THREE.WebGLRenderer({ antialias: true });
         renderer.setSize(container.clientWidth, container.clientHeight);
         renderer.setPixelRatio(window.devicePixelRatio);
         renderer.shadowMap.enabled = true;
         renderer.shadowMap.type = THREE.PCFSoftShadowMap;
-        renderer.setClearColor(0x000000, 0); // Transparent background
+        renderer.setClearColor('#f0f0f0', 1);
         container.appendChild(renderer.domElement);
 
         const composer = new EffectComposer(renderer);
@@ -88,32 +85,12 @@
 
         const bloomParams = {
             enabled: true,
-            strength: 1.5,
-            radius: 0.4,
-            threshold: 0.85
+            strength: 0.6,
+            radius: 0.33,
+            threshold: 1
         };
         const bloomPass = new UnrealBloomPass(new THREE.Vector2(container.clientWidth, container.clientHeight), bloomParams.strength, bloomParams.radius, bloomParams.threshold);
         composer.addPass(bloomPass);
-
-        const filmParams = {
-            enabled: true,
-            noiseIntensity: 0.35,
-            scanlinesIntensity: 0.025,
-            scanlinesCount: 4096,
-            grayscale: false
-        };
-        const filmPass = new FilmPass(filmParams.noiseIntensity, filmParams.scanlinesIntensity, filmParams.scanlinesCount, filmParams.grayscale);
-        composer.addPass(filmPass);
-
-        const vignetteParams = {
-            enabled: true,
-            offset: 0.5,
-            darkness: 0.5
-        };
-        const vignettePass = new ShaderPass(VignetteShader);
-        vignettePass.uniforms.offset.value = vignetteParams.offset;
-        vignettePass.uniforms.darkness.value = vignetteParams.darkness;
-        composer.addPass(vignettePass);
 
         const controls = new OrbitControls(camera, renderer.domElement);
         controls.enableDamping = true;
@@ -276,18 +253,6 @@
         bloomFolder.add(bloomParams, 'strength', 0, 3, 0.01).onChange(v => bloomPass.strength = v);
         bloomFolder.add(bloomParams, 'radius', 0, 1, 0.01).onChange(v => bloomPass.radius = v);
         bloomFolder.add(bloomParams, 'threshold', 0, 1, 0.01).onChange(v => bloomPass.threshold = v);
-
-        const filmFolder = postFolder.addFolder('Film');
-        filmFolder.add(filmParams, 'enabled').onChange(v => filmPass.enabled = v);
-        filmFolder.add(filmParams, 'noiseIntensity', 0, 1, 0.01).onChange(v => filmPass.uniforms.nIntensity.value = v);
-        filmFolder.add(filmParams, 'scanlinesIntensity', 0, 1, 0.01).onChange(v => filmPass.uniforms.sIntensity.value = v);
-        filmFolder.add(filmParams, 'scanlinesCount', 0, 4096, 1).onChange(v => filmPass.uniforms.sCount.value = v);
-        filmFolder.add(filmParams, 'grayscale').onChange(v => filmPass.uniforms.grayscale.value = v);
-
-        const vignetteFolder = postFolder.addFolder('Vignette');
-        vignetteFolder.add(vignetteParams, 'enabled').onChange(v => vignettePass.enabled = v);
-        vignetteFolder.add(vignetteParams, 'offset', 0, 2, 0.01).onChange(v => vignettePass.uniforms.offset.value = v);
-        vignetteFolder.add(vignetteParams, 'darkness', 0, 2, 0.01).onChange(v => vignettePass.uniforms.darkness.value = v);
 
         // Model loading
         const glbUrl = './scene-optimized.glb'; // Assuming the GLB file is in the same directory as index.html on your Netlify site
