--- a/Index.html
+++ b/Index.html
@@ -72,16 +72,19 @@
         camera.position.set(-0.2840329107436267, 1.4382243402279846, 10.275912849022538);
         camera.rotation.set(0.00101810946737628, -0.021709860116203898, 0.00002210128553521455);
 
-        const renderer = new THREE.WebGLRenderer({ antialias: true });
+        const renderer = new THREE.WebGLRenderer({ antialias: true, alpha: true });
         renderer.setSize(container.clientWidth, container.clientHeight);
         renderer.setPixelRatio(window.devicePixelRatio);
         renderer.shadowMap.enabled = true;
         renderer.shadowMap.type = THREE.PCFSoftShadowMap;
-        renderer.setClearColor('#f0f0f0', 1);
+        renderer.setClearColor(0x000000, 0);
         container.appendChild(renderer.domElement);
 
         const composer = new EffectComposer(renderer);
+        composer.setSize(container.clientWidth, container.clientHeight);
+
         const renderPass = new RenderPass(scene, camera);
+        renderPass.clear = false; // To preserve transparency
         composer.addPass(renderPass);
 
         const bloomParams = {
@@ -96,12 +99,14 @@
         const ssaoParams = {
             kernelRadius: 16,
             minDistance: 0.005,
-            maxDistance: 0.1
+            maxDistance: 0.1,
+            intensity: 10 // Default intensity
         };
         const ssaoPass = new SSAOPass(scene, camera, container.clientWidth, container.clientHeight);
         ssaoPass.kernelRadius = ssaoParams.kernelRadius;
         ssaoPass.minDistance = ssaoParams.minDistance;
         ssaoPass.maxDistance = ssaoParams.maxDistance;
+        ssaoPass.intensity = ssaoParams.intensity;
         composer.addPass(ssaoPass);
 
         const controls = new OrbitControls(camera, renderer.domElement);
@@ -270,6 +275,18 @@
         ssaoFolder.add(ssaoParams, 'kernelRadius', 0, 32, 0.1).onChange(v => ssaoPass.kernelRadius = v);
         ssaoFolder.add(ssaoParams, 'minDistance', 0, 0.1, 0.001).onChange(v => ssaoPass.minDistance = v);
         ssaoFolder.add(ssaoParams, 'maxDistance', 0, 0.2, 0.001).onChange(v => ssaoPass.maxDistance = v);
+        ssaoFolder.add(ssaoParams, 'intensity', 0, 100, 1).onChange(v => ssaoPass.intensity = v);
+
+        // Shadow catcher GUI
+        const shadowCatcherParams = {
+            offset: -0.01
+        };
+        let shadowCatcherPlane = null;
+        let modelMinY = 0;
+        const shadowCatcherFolder = gui.addFolder('Shadow Catcher');
+        shadowCatcherFolder.add(shadowCatcherParams, 'offset', -1, 1, 0.001).onChange(v => {
+            if (shadowCatcherPlane) shadowCatcherPlane.position.y = modelMinY + v;
+        });
 
         // Model loading
         const glbUrl = './scene-optimized.glb'; // Assuming the GLB file is in the same directory as index.html on your Netlify site
@@ -286,9 +303,9 @@
                 // Identify objects and enable shadows
                 gltf.scene.traverse((child) => {
                     if (child.isMesh) {
-                        if (child.name.startsWith('Color') && !['Color21', 'Color25', 'Color277'].includes(child.name)) {
+                        if (child.name.startsWith('Color') && !['Color21', 'Color25', '1'].includes(child.name)) {
                             primaryColorObjects.push(child);
-                        } else if (['Color21', 'Color25', 'Color277'].includes(child.name)) {
+                        } else if (['Color21', 'Color25', '1'].includes(child.name)) {
                             secondaryColorObjects.push(child);
                         }
                         if (child.name.startsWith('Decal')) decalObjects.push(child);
@@ -299,16 +316,16 @@
 
                 // Create shadow catcher plane
                 const box = new THREE.Box3().setFromObject(gltf.scene);
-                const minY = box.min.y;
+                modelMinY = box.min.y;
                 const planeSize = Math.max(box.max.x - box.min.x, box.max.z - box.min.z) * 2;
                 const planeGeo = new THREE.PlaneGeometry(planeSize, planeSize);
                 const planeMat = new THREE.ShadowMaterial({ opacity: 0.5 });
-                const plane = new THREE.Mesh(planeGeo, planeMat);
-                plane.rotation.x = -Math.PI / 2;
-                plane.position.y = minY - 0.01;
-                plane.receiveShadow = true;
-                plane.castShadow = false;
-                scene.add(plane);
+                shadowCatcherPlane = new THREE.Mesh(planeGeo, planeMat);
+                shadowCatcherPlane.rotation.x = -Math.PI / 2;
+                shadowCatcherPlane.position.y = modelMinY + shadowCatcherParams.offset;
+                shadowCatcherPlane.receiveShadow = true;
+                shadowCatcherPlane.castShadow = false;
+                scene.add(shadowCatcherPlane);
 
                 // Center the model
                 const center = box.getCenter(new THREE.Vector3());
@@ -416,7 +433,12 @@
                     ...(slot.params.type === 'HemisphereLight' ? {
                         groundColor: slot.params.groundColor
                     } : {})
-                }))
+                })),
+                postProcessing: {
+                    bloom: bloomParams,
+                    ssao: ssaoParams
+                },
+                shadowCatcher: shadowCatcherParams
             };
             console.log(JSON.stringify(settings, null, 2));
         });
